--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
@@ -9,9 +9,14 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email is invalid.</string>
     <string name="error_invalid_username">This username is invalid.</string>
-    <string name="error_invalid_password">This password is too short.</string>
+    <string name="error_invalid_password">Password must contain an uppercase letter, a digit,
+        and at least 4 characters.</string>
+    <string name="error_user_type_not_selected">Please choose one of the
+        following user options.</string>
     <string name="error_incorrect_password">This password is incorrect.</string>
     <string name="error_field_required">This field is required.</string>
+    <string name="error_email_taken">This email is already taken.</string>
+    <string name="error_username_taken">This username is already taken.</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
