--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="register">Register</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="cancel">Cancel</string>
+    <string name="title_activity_submit_report">SubmitReportActivity</string>
 </resources>
