--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
         and at least 4 characters.</string>
     <string name="error_user_type_not_selected">Please choose one of the
         following user options.</string>
+    <string name="error_type_not_selected">Please choose one of the
+        following type options.</string>
+    <string name="error_condition_not_selected">Please choose one of the
+        following condition options.</string>
     <string name="error_username_does_not_exist">This username does not exist.</string>
     <string name="error_incorrect_password">This password is incorrect.</string>
     <string name="error_field_required">This field is required.</string>
@@ -25,4 +29,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="cancel">Cancel</string>
     <string name="title_activity_submit_report">SubmitReportActivity</string>
+    <string name="error_invalid_location">Enter a location with length greater than 5.</string>
 </resources>
