--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="cancel">Cancel</string>
     <string name="title_activity_submit_report">SubmitReportActivity</string>
     <string name="error_invalid_location">Enter a location with length greater than 5.</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
