added GraphView dependency and graph xml

--- a/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
+++ b/WaterReporter(Team14-HarambeLovedWaters)/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="title_activity_submit_report">SubmitReportActivity</string>
     <string name="error_invalid_location">Please enter a valid location.</string>
     <string name="error_invalid_double">Please enter a number.</string>
+    <string name="title_activity_graph">GraphActivity</string>
 </resources>
